--- a/PointsApp1/PointsAppTests/PointsApp1.Tests.csproj
+++ b/PointsApp1/PointsAppTests/PointsApp1.Tests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PointsApp1\PointsApp1.csproj" />
+    <ProjectReference Include="..\PointsApp1\PointsApp.csproj" />
   </ItemGroup>
 
 </Project>
